# vehicle_control_module

./: README.md
conf/: vehicle_control_module.atstart
conf/jlink/: ozone.jdebug
hw/: .gitignore
hw/rev0/: vehicle_control_module.brd  vehicle_control_module.sch
hw/testtool_rev0/: bom.xlsx  testtool.brd  testtool.sch
sw/: CMakeLists.txt  THIRD_PARTY.md
sw/cmake/: arm-none-eabi.cmake
sw/conf/: vehicle_control_module.atstart
sw/conf/jlink/: .gitignore  jflash.jflash  ozone.jdebug
sw/ld/: samv71q21b_flash.ld
sw/src/: CMakeLists.txt  THIRD_PARTY.md  asf.h  atmel_start_pins.h  debug_cycle_counter.cpp  driver_init.c  driver_init.h  ethernet_phy_main.c  freertos_hooks.cpp  main.cpp  task_adc.cpp  task_ethernet.cpp  task_led.cpp  task_lua.cpp  task_monitor.cpp
sw/src/ASF/common/components/memory/eeprom/at24macxx/: at24macxx.c  at24macxx.h
sw/src/ASF/sam/boards/samv71_xplained_ultra/: samv71_xplained_ultra.h
sw/src/ASF/sam/components/ethernet_phy/: documentation.h
sw/src/ASF/sam/components/ethernet_phy/ksz8061rnb/: ethernet_phy.c  ethernet_phy.h
sw/src/ASF/sam/drivers/afec/: afec.c
sw/src/ASF/sam/drivers/chipid/: chipid.c  chipid.h
sw/src/ASF/sam/drivers/gmac/: gmac.h  gmac_phy.c  gmac_raw_2.c  gmac_raw_2.h
sw/src/ASF/sam/drivers/pwm/: pwm.c  pwm.h
sw/src/ASF/sam/drivers/qspi/: qspi.c  qspi.h
sw/src/ASF/sam/drivers/twihs/: twihs.c
sw/src/ASF/sam/utils/: compiler.h
sw/src/ASF/sam/utils/syscalls/gcc/: syscalls.c
sw/src/FreeRTOS/: tasks.c
sw/src/FreeRTOS-Plus-TCP/: FreeRTOS_DNS.c
sw/src/FreeRTOS-Plus-TCP/portable/NetworkInterface/DriverSAM/: NetworkInterface.c  gmac_SAM.c  gmac_SAM.h
sw/src/FreeRTOS/include/: FreeRTOS.h
sw/src/FreeRTOS/portable/GCC/ARM_CM7/r0p1/: port.c  portmacro.h
sw/src/SystemView/Config/: Global.h
sw/src/SystemView/FreeRTOS/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
sw/src/SystemView/FreeRTOS/Config/Cortex-M/: SEGGER_SYSVIEW_Config_FreeRTOS.c
sw/src/boards/: board.h
sw/src/boards/samv71_xplained_ultra/: init.cpp  samv71_xplained_ultra.h
sw/src/cmsis/samv71b/gcc/: startup_samv71q21b.c  system_samv71q21b.c
sw/src/cmsis/samv71b/include/: component-version.h  sam.h  samv71j19b.h  samv71j20b.h  samv71j21b.h  samv71n19b.h  samv71q19b.h  samv71q20b.h  system_samv71.h
sw/src/cmsis/samv71b/include/component/: aes.h  chipid.h  dacc.h  efc.h  gmac.h  gpbr.h  i2sc.h  icm.h  isi.h  matrix.h  mlb.h  rswdt.h  smc.h  ssc.h  supc.h  tc.h  uart.h  usbhs.h  wdt.h
sw/src/cmsis/samv71b/include/component/deprecated/: tc.h  usbhs.h
sw/src/cmsis/samv71b/include/instance/: aes.h  chipid.h  dacc.h  efc.h  gpbr.h  hsmci.h  i2sc0.h  i2sc1.h  icm.h  mcan0.h  mcan1.h  piob.h  pioc.h  piod.h  pioe.h  pmc.h  qspi.h  rstc.h  rswdt.h  rtc.h  spi0.h  tc0.h  tc2.h  tc3.h  trng.h  twihs0.h  twihs1.h  twihs2.h  uart1.h  uart4.h  usart1.h  usbhs.h  xdmac.h
sw/src/cmsis/samv71b/include/pio/: samv71j19b.h  samv71n19b.h  samv71q19b.h
sw/src/config/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  conf_board.h  conf_eth.h  conf_features.h  conf_mcan.h  hpl_afec_config.h  hpl_gmac_config.h  hpl_mcan_config.h  hpl_pio_config.h  hpl_pmc_config.h  hpl_pwm_config.h  hpl_qspi_config.h  hpl_rtc_config.h  hpl_spi_config.h  hpl_twihs_config.h  hpl_uart_config.h  hpl_wdt_config.h  peripheral_clk_config.h
sw/src/driver/gmac/: gmac_handler.cpp  gmac_handler.h  network_interface.cpp
sw/src/examples/: driver_examples.c  driver_examples.h
sw/src/hal/src/: hal_calendar.c  hal_ext_irq.c  hal_usart_os.c
sw/src/hal/utils/include/: parts.h
sw/src/hpl/aes/: hpl_aes.c
sw/src/hpl/core/: hpl_init.c
sw/src/hpl/mcan/: hpl_mcan.c
sw/src/hpl/pio/: hpl_pio_ext.c
sw/src/hpl/pmc/: hpl_pmc.h
sw/src/hpl/pwm/: hpl_pwm.c  hpl_pwm_base.h
sw/src/hpl/qspi/: hpl_qspi.c
sw/src/hpl/rtc/: hpl_rtc.c
sw/src/hpl/spi/: hpl_spi.c  hpl_spi_base.h
sw/src/hpl/trng/: hpl_trng.c
sw/src/hpl/wdt/: hpl_wdt.c
sw/src/hri/: hri_acc_v71b.h  hri_aes_v71b.h  hri_afec_v71b.h  hri_chipid_v71b.h  hri_dacc_v71b.h  hri_efc_v71b.h  hri_gmac_v71b.h  hri_gpbr_v71b.h  hri_hsmci_v71b.h  hri_i2sc_v71b.h  hri_icm_v71b.h  hri_isi_v71b.h  hri_lockbit_v71b.h  hri_matrix_v71b.h  hri_mcan_v71b.h  hri_mlb_v71b.h  hri_pio_v71b.h  hri_pmc_v71b.h  hri_pwm_v71b.h  hri_qspi_v71b.h  hri_rstc_v71b.h  hri_rswdt_v71b.h  hri_rtc_v71b.h  hri_rtt_v71b.h  hri_sdramc_v71b.h  hri_smc_v71b.h  hri_spi_v71b.h  hri_ssc_v71b.h  hri_supc_v71b.h  hri_tc_v71b.h  hri_trng_v71b.h  hri_twihs_v71b.h  hri_uart_v71b.h  hri_usart_v71b.h  hri_usbhs_v71b.h  hri_utmi_v71b.h  hri_v71b.h  hri_wdt_v71b.h  hri_xdmac_v71b.h
sw/src/include/: FreeRTOSConfig.h  chip_id_helper.h  mac_address.h  mini_ip.h  task_adc.h  task_ethernet.h  task_led.h  task_lua.h  task_monitor.h
sw/src/samv71b/gcc/: samv71q21b_sram.ld  startup_samv71q21b.c
sw/src/samv71b/include/: samv71n20b.h  samv71n21b.h  samv71q21b.h
sw/src/samv71b/include/component/: acc.h  afec.h  hsmci.h  mcan.h  pio.h  pmc.h  pwm.h  qspi.h  rstc.h  rtc.h  rtt.h  sdramc.h  spi.h  trng.h  twihs.h  usart.h  utmi.h  xdmac.h
sw/src/samv71b/include/component/deprecated/: usart.h
sw/src/samv71b/include/instance/: acc.h  afec0.h  afec1.h  gmac.h  isi.h  matrix.h  mlb.h  pioa.h  pwm0.h  pwm1.h  rtt.h  sdramc.h  smc.h  spi1.h  ssc.h  supc.h  tc1.h  uart0.h  uart2.h  uart3.h  usart0.h  usart2.h  utmi.h  wdt.h
sw/src/samv71b/include/pio/: samv71j20b.h  samv71j21b.h  samv71n20b.h  samv71n21b.h  samv71q20b.h  samv71q21b.h
